add pages and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale1.0">
-        <title>Clark Greene Home</title>
+        <title>Portfolio</title>
         <link href="css/main.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://use.typekit.net/vei8mzk.css">
     
@@ -16,7 +16,7 @@
     </header>
       <nav> 
          <ul>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="http://index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
          </ul>  
