updated all html pages

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </header>
       <nav> 
          <ul>
-            <li><a href="http://portfolio.html">Portfolio</a></li>
-            <li><a href="http://about.html">About</a></li>
-            <li><a href="http://contact.html">Contact</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul>  
             
     </nav>
