--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
     </header>
       <nav> 
          <ul>
-            <li><a href="http://index.html">Home</a></li>
-            <li><a href="http://portfolio.html">Portfolio</a></li>
-            <li><a href="http://contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul>  
             
     </nav>
